[package]
name = "weather-rmcp"
version = "0.1.0"
edition = "2024"

[features]
default = ["std_io"]
sse = [ 
    "rmcp/transport-sse-server", 
    "tokio-util",
    "axum",
    "tokio/signal",
]
std_io = ["rmcp/transport-io", "tokio/io-std"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }

# 条件依赖项
axum = { version = "0.8", features = ["macros"], optional = true }
tokio-util = { version = "0.7", optional = true }
